--- a/about.html
+++ b/about.html
@@ -114,39 +114,39 @@
         <!-- <img src="./images/work/about.jpg" style="width:500px; display:block; margin:auto; margin-top:10px;"> -->
         <table border="0" style="margin:auto;">
 　        <tr>
-　          <td style="border-right:2px #ee7800 dashed;">1998</td>
+　          <td style="border-right:0px #ee7800 solid;">1998</td>
 　          <td style="text-align:center">成立得力廣告社</td>
 　        </tr>
 　        <tr>
-　          <td style="border-right:2px #ee7800 dashed;">2006</td>
+　          <td style="border-right:0px #ee7800 solid;">2006</td>
 　          <td style="text-align:center">開始營建標識指示牌之設計製作</td>
 　        </tr>
           <tr>
-　          <td style="border-right:2px #ee7800 dashed;">2007</td>
+　          <td style="border-right:0px #ee7800 solid;">2007</td>
 　          <td style="text-align:center">開發布條懸掛器，獲得兩項專利並榮獲發明銅牌獎</td>
 　        </tr>
 　        <tr>
-　          <td style="border-right:2px #ee7800 dashed;">2008</td>
+　          <td style="border-right:0px #ee7800 solid;">2008</td>
 　          <td style="text-align:center">成立亞特文創科技有限公司</td>
 　        </tr>
           <tr>
-　          <td style="border-right:2px #ee7800 dashed;">2010</td>
+　          <td style="border-right:0px #ee7800 solid;">2010</td>
 　          <td style="text-align:center">亞特科技成立機械加工部，購置鐳射切割機、CNC雕刻機</td>
 　        </tr>
           <tr>
-　          <td style="border-right:2px #ee7800 dashed;">2012</td>
+　          <td style="border-right:0px #ee7800 solid;">2012</td>
 　          <td style="text-align:center">得力廣告社改制為快得力廣告有限公司</td>
 　        </tr>
           <tr>
-　          <td style="border-right:2px #ee7800 dashed;">2013</td>
+　          <td style="border-right:0px #ee7800 solid;">2013</td>
 　          <td style="text-align:center">榮獲第二屆全國廣告工程設計比賽第五名(中區第一名)</td>
 　        </tr>
           <tr>
-　          <td style="border-right:2px #ee7800 dashed;">2016</td>
+　          <td style="border-right:0px #ee7800 solid;">2016</td>
 　          <td style="text-align:center">榮獲台中市政府優良企業表揚</td>
 　        </tr>
           <tr>
-　          <td style="border-right:2px #ee7800 dashed;">2018</td>
+　          <td style="border-right:0px #ee7800 solid;">2018</td>
 　          <td style="text-align:center">購置自有廠房約300坪，遷入現址</td>
 　        </tr>
         </table>
@@ -160,23 +160,23 @@
           <!-- <p style="margin-top:10px; text-align:center;">效率 Efficiency  – 精進生產流程即時產出，並提供給客戶專業的服務。</p> -->
         <table border="0" style="margin:auto; margin-top:-20px;">
 　        <tr>
-　          <td style="border-right:2px #ee7800 dashed;">價值 Value</td>
+　          <td style="border-right:0px #ee7800 dashed;">價值 Value</td>
 　          <td style="text-align:center">提供高價值產品，經由我們的服務，提升品牌效益</td>
 　        </tr>
 　        <tr>
-　          <td style="border-right:2px #ee7800 dashed;">誠信 Integrity</td>
+　          <td style="border-right:0px #ee7800 dashed;">誠信 Integrity</td>
 　          <td style="text-align:center">不說假話，不輕易承諾，對答應的事情全力以赴</td>
 　        </tr>
           <tr>
-　          <td style="border-right:2px #ee7800 dashed;">創新 Innovation</td>
+　          <td style="border-right:0px #ee7800 dashed;">創新 Innovation</td>
 　          <td style="text-align:center">永遠找出更好的方法，完成我們的專案</td>
 　        </tr>
 　        <tr>
-　          <td style="border-right:2px #ee7800 dashed;">熱忱 Enthusiasm</td>
+　          <td style="border-right:0px #ee7800 dashed;">熱忱 Enthusiasm</td>
 　          <td style="text-align:center">對任何人、事、物，以積極正向的態度面對</td>
 　        </tr>
           <tr>
-　          <td style="border-right:2px #ee7800 dashed;">效率 Efficiency</td>
+　          <td style="border-right:0px #ee7800 dashed;">效率 Efficiency</td>
 　          <td style="text-align:center">精進生產流程即時產出，並提供給客戶專業的服務</td>
 　        </tr>
         </table>
