--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <script src="style/js/jquery-1.8.2.min.js" type="text/javascript"></script>
 <script type="text/javascript" src="style/js/jquery.superslide.2.1.1.js"></script>
 <script type="text/javascript" src="style/js/js.js"></script>
-
+<meta name="google-site-verification" content="uBSF85ummVDdto4zJJiSr1SUnJboCZ1urWdVVaPGVsA" />
 <meta http-equiv="mobile-agent" content="format=xhtml;url=./index_m.html">
 <script type="text/javascript">if(window.location.toString().indexOf('pref=padindex') != -1){}else{if(/AppleWebKit.*Mobile/i.test(navigator.userAgent) || (/MIDP|SymbianOS|NOKIA|SAMSUNG|LG|NEC|TCL|Alcatel|BIRD|DBTEL|Dopod|PHILIPS|HAIER|LENOVO|MOT-|Nokia|SonyEricsson|SIE-|Amoi|ZTE/.test(navigator.userAgent))){if(window.location.href.indexOf("?mobile")<0){try{if(/Android|Windows Phone|webOS|iPhone|iPod|BlackBerry/i.test(navigator.userAgent)){window.location.href="./index_m.html";}else if(/iPad/i.test(navigator.userAgent)){}else{}}catch(e){}}}}</script>
 </head>
